--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                             <li><a class="sub_menu_soon" href="#">Thriller Bark</a></li>
                             <li><a class="sub_menu_soon" href="#">Sabaody Archipelago </a></li>
                             <li><a class="sub_menu_soon" href="#">Impel Down </a></li>
-                            <li><a class="sub_menu" href="/manga/onepiece/marineford">Marineford</a></li>
-                            <li><a class="sub_menu" href="/manga/onepiece/fishman">Fishman Island</a></li>
-                            <li><a class="sub_menu" href="/manga/onepiece/punkhazard">Punk Hazard</a></li>
+                            <li><a class="sub_menu" href="/manga/onepiece/marineford.html">Marineford</a></li>
+                            <li><a class="sub_menu" href="/manga/onepiece/fishman.html">Fishman Island</a></li>
+                            <li><a class="sub_menu" href="/manga/onepiece/punkhazard.html">Punk Hazard</a></li>
                             <li><a class="sub_menu_soon" href="#">Dressrosa</a></li>
                             <li><a class="sub_menu_soon" href="#">Zou</a></li>
                         </ul>
