--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <header id="titulo">
-        <h1>Manga Comparison</h1>
+        <h1>ARCS</h1>
 
     </header>
     <section id="menu_box">
         <header id="menu">
             <nav>
                 <ul>
-                    <li><a class="main_menu" href="#">One Piece</a>
+                    <li><a class="main_menu" href="#"></a>
                         <ul>
                             <li><a class="sub_menu_soon" href="#">Romance Dawn</a></li>
                             <li><a class="sub_menu_soon" href="#">Arlong Park</a></li>
@@ -56,12 +56,10 @@
                             <li><a class="sub_menu" href="#">Episode 1</a></li>
                             <li><a class="sub_menu" href="#">Episode 12</a></li> -->
                 </ul>
-                </li>
-                </ul>
             </nav>
         </header>
     </section>
-    <footer><a href="https://hummingbird.me/users/Cyatek" target="_blank">@cyatek</a></footer>
+    <footer><a href="https://twitter.com/punlad" target="_blank">@punlad</a></footer>
 </body>
 
 </html>
