--- a/index.html
+++ b/index.html
@@ -59,7 +59,21 @@
             </nav>
         </header>
     </section>
-    <footer><a href="https://twitter.com/punlad" target="_blank">@punlad</a></footer>
+<footer>
+
+        <a  href="rss.xml">
+              <img id="rss" class="links" src="http://cdn2.hubspot.net/hub/53/file-30171512-png/RSS.png" alt="RSS" >
+                     </a>
+
+
+
+        <a  href="https://cyatek.imgur.com">
+               <img id="imgur" class="links" src="https://www.userlogos.org/files/imgur-i-logo-png.png" alt="imgur" >
+           </a>
+
+
+    <a id="cyatek" href="https://twitter.com/punlad" target="_blank">@punlad</a>
+</footer>
 </body>
 
 </html>
