--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <li><a class="sub_menu_soon" href="#">Alabasta</a></li>
                             <li><a class="sub_menu_soon" href="#">Skypiea</a></li>
                             <li><a class="sub_menu_soon" href="#">Water 7</a></li>
-                            <li><a class="sub_menu_soon" href="#">Enies Lobby</a></li>
+                            <li><a class="sub_menu" href="/manga/onepiece/enieslobby.html">Enies Lobby</a></li>
                             <li><a class="sub_menu_soon" href="#">Thriller Bark</a></li>
                             <li><a class="sub_menu_soon" href="#">Sabaody Archipelago </a></li>
                             <li><a class="sub_menu_soon" href="#">Impel Down </a></li>
