--- a/manga/onepiece/test.html
+++ b/manga/onepiece/test.html
@@ -23,7 +23,76 @@
         <script type="text/javascript">
             $(function () {
                 var imgList = [
-
+                    'enieslobby/1b.jpg',
+                    'enieslobby/2b.jpg',
+                    'enieslobby/3b.jpg',
+                    'enieslobby/4b.jpg',
+                    'enieslobby/5b.jpg',
+                    'enieslobby/6b.jpg',
+                    'enieslobby/7b.jpg',
+                    'enieslobby/8b.jpg',
+                    'enieslobby/9b.jpg',
+                    'enieslobby/10b.jpg',
+                    'enieslobby/11b.jpg',
+                    'enieslobby/12b.jpg',
+                    'enieslobby/13b.jpg',
+                    'enieslobby/14b.jpg',
+                    'enieslobby/15b.jpg',
+                    'enieslobby/16b.jpg',
+                    'enieslobby/17b.jpg',
+                    'enieslobby/18b.jpg',
+                    'enieslobby/19b.jpg',
+                    'enieslobby/20b.jpg',
+                    'enieslobby/21b.jpg',
+                    'enieslobby/22b.jpg',
+                    'enieslobby/23b.jpg',
+                    'enieslobby/24b.jpg',
+                    'enieslobby/25b.jpg',
+                    'enieslobby/26b.jpg',
+                    'enieslobby/27b.jpg',
+                    'enieslobby/28b.jpg',
+                    'enieslobby/29b.jpg',
+                    'enieslobby/30b.jpg',
+                    'enieslobby/32b.jpg',
+                    'enieslobby/33b.jpg',
+                    'enieslobby/34b.jpg',
+                    'enieslobby/35b.jpg',
+                    'enieslobby/36b.jpg',
+                    'enieslobby/37b.jpg',
+                    'enieslobby/38b.jpg',
+                    'enieslobby/39b.jpg',
+                    'enieslobby/30b.jpg',
+                    'enieslobby/40b.jpg',
+                    'enieslobby/41b.jpg',
+                    'enieslobby/42b.jpg',
+                    'enieslobby/43b.jpg',
+                    'enieslobby/44b.jpg',
+                    'enieslobby/45b.jpg',
+                    'enieslobby/46b.jpg',
+                    'enieslobby/47b.jpg',
+                    'enieslobby/48b.jpg',
+                    'enieslobby/49b.jpg',
+                    'enieslobby/50b.jpg',
+                    'enieslobby/51b.jpg',
+                    'enieslobby/52b.jpg',
+                    'enieslobby/53b.jpg',
+                    'enieslobby/54b.jpg',
+                    'enieslobby/55b.jpg',
+                    'enieslobby/56b.jpg',
+                    'enieslobby/57b.jpg',
+                    'enieslobby/58b.jpg',
+                    'enieslobby/59b.jpg',
+                    'enieslobby/60b.jpg',
+                    'enieslobby/61b.jpg',
+                    'enieslobby/62b.jpg',
+                    'enieslobby/63b.jpg',
+                    'enieslobby/64b.jpg',
+                    'enieslobby/65b.jpg',
+                    'enieslobby/66b.jpg',
+                    'enieslobby/67b.jpg',
+                    'enieslobby/68b.jpg',
+                    'enieslobby/69b.jpg',
+                    'enieslobby/70b.jpg',
             ];
                 var galleryHtml = '';
                 $(imgList).preloadImages(function (isSucceed, finishedCount, len, src) {
