--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="/js/main.js"></script>
     <script>
     function myFunction() {
-        alert("Site is undergoing some changes so nothing works, in the meanwhile please use the imgur albums by clicking on the icon");
+        alert("Site is undergoing some changes so stuff might not work, in the meanwhile please use the imgur albums by clicking on the icon");
     }
 </script>
 </head>
