--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 
-        <a  href="https://cyatek.imgur.com">
+        <a  href="https://imgur.com/user/cyatek/posts">
                <img id="imgur" class="links" src="https://www.userlogos.org/files/imgur-i-logo-png.png" alt="imgur" >
            </a>
 
